Mobile View Spacing Corrected

--- a/assests/css/main.css
+++ b/assests/css/main.css
@@ -437,3 +437,9 @@ ul {
     text-align: center;
   }
 }
+
+@media(max-width: 600px) {
+  .carousel-inner {
+    height: 16em;
+  }
+}
